log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 09:52:43 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   void* arrayList->data = (ArrayList*) malloc(sizeof (ArrayList));
      |                  ^~
arraylist.c:15:18: error: expected expression before ‘->’ token
Compilation failed
3fb1987
Thu 30 Mar 2023 09:52:50 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
a2ae60c
Thu 30 Mar 2023 09:53:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fbb3ba8
Thu 30 Mar 2023 09:53:56 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   int* arrayList->data = (int*) malloc(sizeof (int));
      |                 ^~
arraylist.c:15:17: error: expected expression before ‘->’ token
Compilation failed
33bb8e4
Thu 30 Mar 2023 09:54:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   int* arrayL->data = (int*) malloc(sizeof (int));
      |              ^~
arraylist.c:15:14: error: expected expression before ‘->’ token
Compilation failed
4a44dff
Thu 30 Mar 2023 09:56:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
277ce10
